crates/doodle-core/tests/snapshots/broken_syntax__17_let_missing_value.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected an expression
  --> 17-let-missing-value.doodle:1:8
1 | let x =
  |        ^
